<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nirbhaya</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_nirbhaya_maps">Map</string>
    <string name="phonenumber">PHONE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOG IN</string>
    <string name="profile">Profile</string>
    <string name="add_contact">Emergency  Contacts</string>
    <string name="message">Emergency  Message</string>
    <string name="add_locations">Add Locations</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>