<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_add_contact"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/add_contact" />
    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/message" />
    <item
        android:id="@+id/nav_add_locations"
        android:icon="@drawable/ic_add_location_black_24dp"
        android:title="@string/add_locations" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_feedback_black_24dp"
        android:title="@string/logout" />


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
</menu>