<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/si"
    tools:context="com.example.krantipatil.sosdemo.Sign_in">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/get_pn_sign_in"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="#ffffff"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/phonenumber"
            android:padding="10dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/get_password_sign_in"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/password"
            android:padding="10dp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/log_in"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="#000000" />
    </LinearLayout>


</RelativeLayout>


